# xapi

./: TODO  pyproject.toml  requirements-dev.txt
src/: xapi_client.py
src/grpc_generated/: market_data_pb2.py  market_data_pb2_grpc.py  order_pb2.py  order_pb2_grpc.py  utilities_pb2.py  utilities_pb2_grpc.py
tests/: change_password_test.ipynb  xapi_client_tests.ipynb
tutorials/: create_basket_oder.py  example_base.py  market_data_pb2.py  market_data_pb2_grpc.py  order_pb2.py  order_pb2_grpc.py  tutorial_1_connect_and_disconnect.py  tutorial_2_place_order.py  tutorial_3_order_details.py  tutorial_4_execution_details.py  tutorial_5_cancel_order.py  tutorial_6_market_data.py  utilities_pb2.py  utilities_pb2_grpc.py
